--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="play" >Jugar</string>
     <string name="stats" >Resultados</string>
     <string name="settings" >Otros juegos</string>
-    <string name="welcome1" >Hola, \n Soy BADASS-YODA y me gustaria retarte a que me demuestres cuanto sabes del agua &#8230; </string>
+    <string name="welcome1" >Hola, \n BADASS-YODA soy, si probar tu conocimiento tu quieres completar... ¿Mechero, dónde...? ah!, completar mi reto debes... &#8230; </string>
     <string name="welcome2">Te atreves?</string>
     <string name="tip" color="#F62217" textSize="33dp">Entonces, &#8230; esta envenenada el agua del embalse? \n \n No, porque el agua no esta estancada, esta en continua renovacion, le esta entrando y saliendo agua permanentemente .</string>
     <string name="title_activity_presentacion">Presentacion</string>
